TAG: assemblyseqload-tr7894-BP
DATE: 09/12/2006
STAFF: sc
CHANGES: branch point tag for tr7894, mgiconfig update

TAG: assemblyseqload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
1) build 36; merge

TAG: assemblyseqload-build36-2
DATE: 08/17/2006
STAFF: lec
1) build 36

TAG: assemblyseqload-build36-1
DATE: 07/27/2006
STAFF: lec
1) build 36

TAG: assemblyseqload-build36-BP
DATE: 07/19/2006
STAFF: lec
1) branch point tag for build 36

TAG: assemblyseqload-1-0-9
DATE: 12-06-2004
STAFF: sc
RELEASE: dev 3.1
CHANGES: tr6336
1) assemblyseqloadcron.sh - added sourcing of common.config.sh because of
   factoring out USRLOCALMGI
2) assemblyseqloadcron.sh - added call to seqcacheload seqdescription.csh
3) assemblyseqloadcron.sh - added checking STAT of each script run.
4) assembly_common.config.default - added SEQ_MARKER_DESCRIPT_CACHELOAD

TAG: assemblyseqload-1-0-8
DATE: 11-22-2004
STAFF: sc
RELEASE: dev 3.1
CHANGES: tr6336
1) assembly_common.config.default - added two forgotten USRLOCALMGI 

TAG: assemblyseqload-1-0-7
DATE: 11-19-2004
STAFF: sc
RELEASE: dev 3.1
CHANGES: tr6336
1) assembly_common.config.default - new common config vars

TAG: assemblyseqload-1-0-6
DATE: 11-17-2004
STAFF: sc
RELEASE: dev 3.1
CHANGES: TR6047 dla refactoring
1) *.config.defaults - updated with new class package paths
2) assemblyseqloadcron.sh - commented out call to load ncbi as will not be
   a part of release

TAG: assemblyseqload-1-0-5
DATE: 11/04/2004
STAFF: sc
RELEASE: alpha build 3.1
CHANGES: more updates to config defaults

TAG: assemblyseqload-1-0-4
DATE: 11/04/2004
STAFF: sc
RELEASE: alpha build
CHANGES:
1) assembly_common.config.default and ensembl_assemblyseqload.config.default -
   changed some default values

TAG: assemblyseqload-1-0-3
DATE: 10/22/2004
STAFF: sc
RELEASE: dev build
CHANGES:
1) ensemb and ncbi config.defaults - changed name of interpreter
   (I renamed the class)

TAG: assemblyseqload-1-0-2
DATE: 10/19/2004
STAFF: sc
RELEASE: dev build
CHANGES: