@@ -1,11 +1,26 @@
 #format: sh
 #
-#  assembly_common.config.default
+#  Configuration common to NCBI and ENSEMBL assembly seqload
 #
 #  This file sets up environment variables that are common to all
 #  Assembly Sequence Loads
 #
+#  IMPORTANT: This file is dependent on FILEDIR set in both 
+#             ncbi_assemblyseqload.config and ensembl_assemblyseqload.config
 ###########################################################################
+
+#
+#  If the MGICONFIG environment variable does not have a local override,
+#  use the default "live" settings.
+#
+if [ "${MGICONFIG}" = "" ]
+then
+    MGICONFIG=/usr/local/mgi/live/mgiconfig
+    export MGICONFIG
+fi
+
+. ${MGICONFIG}/master.config.sh
+
 
 ###########################################################################
 #
@@ -14,60 +29,22 @@
 ###########################################################################
 
 #  Installation directory 
-INSTALLDIR=${USRLOCALMGI}/dataload/assemblyseqload
+INSTALLDIR=${DATALOAD}/assemblyseqload
 
 export INSTALLDIR
 
 ###########################################################################
 #
-#  DATABASE SETTINGS BY DATABASE
+#  JAVA SETTINGS
 #
 ###########################################################################
 
-# MGD Connection parameters 
-MGD_DBSERVER=PROD_MGI
-#MGD_DBSERVER=DEV1_MGI
-
-MGD_DBURL=shire.informatics.jax.org:4100
-#MGD_DBURL=rohan.informatics.jax.org:4101
-
-MGD_DBNAME=mgd
-
-MGD_DBUSER=mgd_dbo
-MGD_DBPASSWORDFILE=${MGIDBUTILSDIR}/.mgd_dbo_password
-
-MGD_DBSCHEMADIR=${MGDDBSCHEMADIR}
-
-export MGD_DBSERVER MGD_DBURL MGD_DBNAME
-export MGD_DBUSER MGD_DBPASSWORDFILE MGD_DBSCHEMADIR
-
-# RADAR Connection parameters 
-RADAR_DBSERVER=PROD_MGI
-#RADAR_DBSERVER=DEV1_MGI
-
-RADAR_DBURL=shire.informatics.jax.org:4100
-#RADAR_DBURL=rohan.informatics.jax.org:4101
-
-RADAR_DBNAME=radar
-#RADAR_DBNAME=radar_release
-
-RADAR_DBUSER=mgd_dbo
-RADAR_DBPASSWORDFILE=${MGIDBUTILSDIR}/.mgd_dbo_password
-
-RADAR_DBSCHEMADIR=${RADARDBSCHEMADIR}
-
-export RADAR_DBSERVER RADAR_DBURL RADAR_DBNAME RADAR_DBUSER 
-export RADAR_DBPASSWORDFILE RADAR_DBSCHEMADIR 
-
-###########################################################################
-#
-#  SOFTWARE SETTINGS
-#
-###########################################################################
-
+# allow 1.5 initial and max heap memory - note this is the max for which
+# the loader will run since child processes (e.g. isql exec of sql files)
+# need memory from the parent process (2G max given to a process by the op sys)
 JAVARUNTIMEOPTS="-Xms1500m -Xmx1500m"
 
-JAVA_LIB=${JAVAPATH}/lib_java_dla/dla.jar:${JAVAPATH}/lib_java_core/core.jar:${JAVAPATH}/lib_java_dbsmgd/dbsmgd.jar:${JAVAPATH}/lib_java_dbsrdr/dbsrdr.jar
+JAVA_LIB=${MGI_JAVALIB}/core.jar:${MGI_JAVALIB}/dbsmgd.jar:${MGI_JAVALIB}/dbsrdr.jar:${MGI_JAVALIB}/dla.jar
 
 CLASSPATH=.:${JAVA_LIB}:${COMMON_CLASSPATH}
 
@@ -79,39 +56,38 @@ export JAVARUNTIMEOPTS JAVA_LIB CLASSPATH
 #
 ###########################################################################
 
+#
+# output file settings
+#
+
+# Full path the the logs, reports, and archive directories
+# FILEDIR defined in specific config file
+LOGDIR=${FILEDIR}/logs
+RPTDIR=${FILEDIR}/reports
+OUTPUTDIR=${FILEDIR}/output
+ARCHIVEDIR=${FILEDIR}/archive
+
+export LOGDIR RPTDIR OUTPUTDIR ARCHIVEDIR
+
+#
+# general settings
+#
+# Java applications
+DLA_LOADER=org.jax.mgi.shr.dla.loader.seq.AssemblySeqloader
+DLA_START=org.jax.mgi.shr.dla.loader.DLAStart
+
+export DLA_LOADER DLA_START
+
 # SQL STREAM
-DLA_DB_PREFIX=MGD
+# this overrides the default BCP_Inline_Stream
 DLA_LOAD_STREAM=org.jax.mgi.shr.dbutils.dao.BCP_Stream
 DLA_QC_STREAM=org.jax.mgi.shr.dbutils.dao.BCP_Stream
 
-export DLA_DB_PREFIX DLA_LOAD_STREAM DLA_QC_STREAM
+# prefix of Configuration variable names for the load database
+# e.g. prefixes DBSERVER, DBNAME, BCP_PATH, etc
+DLA_DB_PREFIX=MGD
 
-# turn off searches for associated clones in the MSProcessor
-MS_OK_TO_SEARCH_ASSOC_CLONES=false
-
-export MS_OK_TO_SEARCH_ASSOC_CLONES
-
-# Full path the the logs, reports, and archive directories
-LOGDIR=${FILEDIR}/logs
-RPTDIR=${FILEDIR}/reports
-ARCHIVEDIR=${FILEDIR}/archive
-OUTPUTDIR=${FILEDIR}/output
-
-export LOGDIR RPTDIR ARCHIVEDIR OUTPUTDIR
-
-# Send debug messages to the diagnostic log
-LOG_DEBUG=false
-
-# send caching debug messages to the diagnostic log
-CACHE_DEBUG=false
-
-# send sql debug messages to the diagnostic log
-DBDEBUG=false
-
-# logger factory class - allows classes to get their own loggers
-LOG_FACTORY=org.jax.mgi.shr.dla.log.DLALoggerFactory
-
-export LOG_DEBUG CACHE_DEBUG DBDEBUG LOG_FACTORY
+export DLA_LOAD_STREAM DLA_QC_STREAM DLA_DB_PREFIX
 
 ###########################################################################
 #
@@ -125,11 +101,6 @@ DLA_START=org.jax.mgi.shr.dla.loader.DLAStart
 
 export DLA_LOADER DLA_START
 
-# incremental, incremental_initial, or delete_reload
-SEQ_LOAD_MODE=delete_reload
-
-export SEQ_LOAD_MODE 
-
 #  Complete path name of the log files
 LOG_PROC=${LOGDIR}/assemblyseqload.proc.log
 LOG_DIAG=${LOGDIR}/assemblyseqload.diag.log
@@ -138,10 +109,28 @@ LOG_VAL=${LOGDIR}/assemblyseqload.val.log
 
 export LOG_PROC LOG_DIAG LOG_CUR LOG_VAL 
 
+# incremental, incremental_initial, or delete_reload
+SEQ_LOAD_MODE=delete_reload
+
+# turn off searches for associated clones in the MSProcessor
+MS_OK_TO_SEARCH_ASSOC_CLONES=false
+
 # full path to sequence repeat file
 SEQ_REPEAT_FILE=${OUTPUTDIR}/seqrepeats.out
 
-export SEQ_REPEAT_FILE
+export SEQ_LOAD_MODE MS_OK_TO_SEARCH_ASSOC_CLONES SEQ_REPEAT_FILE
+
+# Send debug messages to the diagnostic log
+# toggle these to true as needed
+LOG_DEBUG=false
+DBDEBUG=false
+CACHE_DEBUG=false
+
+# logger factory class - allows classes to get their own loggers
+LOG_FACTORY=org.jax.mgi.shr.dla.log.DLALoggerFactory
+
+export LOG_DEBUG DBDEBUG CACHE_DEBUG LOG_FACTORY 
+
 ############################################################################
 #
 # common coordload settings
@@ -170,10 +159,10 @@ export COORD_DLA_LOADER COORD_TYPE COORD_UNITS COORD_REPEAT_FILE COORD_REPEATS_O
 ###########################################################################
 
 # accession association load script
-ACC_LOAD=${USRLOCALMGI}/dataload/genaccload/accLoad.sh
+ACC_LOAD=${DATALOAD}/genaccload/accLoad.sh
 
 # seqcacheload directory
-SEQ_CACHELOAD_DIR=${USRLOCALMGI}/dbutils/seqcacheload
+SEQ_CACHELOAD_DIR=${DATALOAD}/seqcacheload
 
 # seq/marker cache script
 SEQ_MARKER_CACHELOAD=${SEQ_CACHELOAD_DIR}/seqmarker.csh
@@ -223,7 +212,6 @@ export RADAR_BCP_OK_TO_OVERWRITE
 ###########################################################################
 
 #  Recipient list for mailing the log files (comma-separated)
-MAIL_LOG_PROC="sc,lec"
 MAIL_LOG_CUR=""
 
-export MAIL_LOG_PROC MAIL_LOG_CUR
+export MAIL_LOG_CUR
