@@ -1,10 +1,16 @@
 #format: sh
 #
-#  ensembl_assemblyseqload.config.default
+#  ensembl_assemblyseqload.config
 #
 #  This file sets up environment variables that are needed for the
 #  Ensembl Assembly Sequence and Coordinate Loads
 #
+# The following config settings change between loads:
+# 1) INPUTDIR
+# 2) ASSOCFILE
+# 3) SEQ_RELEASE_DATE
+# 4) SEQ_RELEASE_NO
+# 5) COORD_VERSION
 ###########################################################################
 
 
@@ -43,7 +49,7 @@ SEQ_TYPE=DNA
 # sequence quality
 SEQ_QUALITY=High
 
-# jnumber for the sequence load load
+# jnumber for the sequence load
 SEQ_JNUMBER=J:91388
 
 # jnumber for the accession association load
