@@ -5,6 +5,12 @@
 #  This file sets up environment variables that are needed for the
 #  NCBI Assembly Sequence Load and Coordinate Loads
 #
+# The following config settings change between loads:
+# 1) INPUTDIR
+# 2) ASSOCFILE
+# 3) SEQ_RELEASE_DATE
+# 4) SEQ_RELEASE_NO
+# 5) COORD_VERSION
 ###########################################################################
 
 ###########################################################################
