@@ -1,3 +1,9 @@
+TAG: assemblyseqload-tr7894-1
+DATE: 09/13/2006
+STAFF: sc
+CHANGES:
+1) updated to use mgiconfig product
+
 TAG: assemblyseqload-tr7894-BP
 DATE: 09/12/2006
 STAFF: sc
